ngo end added and UI updated for ngo and donor